# LarkSearchBot

./: pyproject.toml
larksearch/: __init__.py  bot.py
larksearch/commands/: help.py  notice.py  search.py
