[tool.poetry]
name = "larksearch"
version = "0.1.0"
description = ""
authors = ["Hepheir <hepheir@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^1.7.3"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
